# live_coverage_bot

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
.github/workflows/: deploy.yml
.planning/: ISSUES.md  MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  agent-history.json
.planning/milestones/: v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-sportybet-client/: 02-01-FIX-SUMMARY.md  02-01-FIX.md  02-01-FIX2-SUMMARY.md  02-01-FIX2.md  02-01-ISSUES.md  02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md
.planning/phases/03-betpawa-client/: 03-01-FIX-SUMMARY.md  03-01-FIX.md  03-01-ISSUES.md  03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-event-matching/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md
.planning/phases/05-slack-alerts/: 05-01-PLAN.md  05-01-SUMMARY.md
.planning/phases/06-monitoring-loop/: 06-01-FIX.md  06-01-ISSUES.md  06-01-PLAN.md  06-01-SUMMARY.md
.planning/phases/6.1-country-alerts/: 6.1-01-PLAN.md  6.1-01-SUMMARY.md  6.1-RESEARCH.md
.planning/phases/6.2-srl-filter-provider-info/: 6.2-01-PLAN.md  6.2-01-SUMMARY.md
.planning/phases/6.3-in-play-filter/: 6.3-01-PLAN.md  6.3-01-SUMMARY.md
.planning/phases/6.4-pre-match-cache/: 6.4-01-PLAN.md  6.4-01-SUMMARY.md
.planning/phases/6.5-human-readable-logging/: 6.5-01-PLAN.md  6.5-01-SUMMARY.md
src/live_coverage_bot/: __init__.py  __main__.py
src/live_coverage_bot/clients/: __init__.py  betpawa.py  models.py  slack.py  sportybet.py
src/live_coverage_bot/config/: __init__.py  loader.py  (+1 more)
(+6 files in other folders)
