[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live-coverage-bot"
version = "0.1.0"
description = "Monitor sports events across betting platforms and notify via Slack"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Live Coverage Bot Team" }
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/live_coverage_bot"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
